--- a/qTest reporting/package.json
+++ b/qTest reporting/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qtest-reporting",
-  "version": "1.2.0",
-  "description": "qTest test execution reporting tool - generates reports of test executions by user and date with test stage mapping support",
+  "version": "1.3.0",
+  "description": "qTest test execution reporting tool with test stage and lab mapping support",
   "main": "dist/report.js",
   "scripts": {
     "build": "tsc",
