--- a/qTest reporting/package.json
+++ b/qTest reporting/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qtest-reporting",
-  "version": "1.3.2",
+  "version": "1.3.5",
   "description": "qTest test execution reporting tool with test stage and lab mapping support",
   "main": "dist/report.js",
   "scripts": {
@@ -9,7 +9,12 @@
     "report:prod": "node dist/report.js",
     "test-auth": "ts-node src/test-auth.ts",
     "test-auth:prod": "node dist/test-auth.js",
-    "inspect-logs": "ts-node src/inspect-test-logs.ts"
+    "inspect-logs": "ts-node src/inspect-test-logs.ts",
+    "test-optimization": "ts-node src/test-optimization.ts",
+    "test-comprehensive": "ts-node src/test-optimization-comprehensive.ts",
+    "debug-cloud": "ts-node src/debug-cloud-structure.ts",
+    "test-endpoints": "ts-node src/test-api-endpoints.ts",
+    "check-projects": "ts-node src/check-projects.ts"
   },
   "keywords": [
     "qtest",
